--- a/ATMFraudDetection/pom.xml
+++ b/ATMFraudDetection/pom.xml
@@ -21,6 +21,12 @@ under the License.
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>com.edgetocloud</groupId>
+		<artifactId>edgetocloud-pipeline</artifactId>
+		<version>1.0.0</version>
+	</parent>
+
 	<groupId>frauddetection</groupId>
 	<artifactId>frauddetection</artifactId>
 	<version>0.1</version>
