--- a/SensorAssessment/pom.xml
+++ b/SensorAssessment/pom.xml
@@ -20,6 +20,11 @@ under the License.
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.edgetocloud</groupId>
+		<artifactId>edgetocloud-pipeline</artifactId>
+		<version>1.0.0</version>
+	</parent>
 
 	<groupId>sensordetection</groupId>
 	<artifactId>sensor-assessment</artifactId>
